Updated post install script.

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "build:gh-pages": "react-scripts build && rm build/index.js && mv build/demosite.js build/index.js",
     "deploy:gh-pages": "gh-pages -d build",
     "gh-pages": "npm run build:gh-pages && npm run deploy:gh-pages",
-    "postinstall": "mv ./dist/* ./ && rmdir ./dist"
+    "postinstall": "mv ./dist/* ./"
   },
   "eslintConfig": {
     "extends": "react-app"
