--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-image-annotate",
   "version": "0.1.34",
   "main": "index.js",
-  "files": ["dist"],
+  "files": ["dist/**"],
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
