--- a/package.json
+++ b/package.json
@@ -6,22 +6,26 @@
     "dist/**"
   ],
   "dependencies": {
+    "@charlietango/use-native-lazy-loading": "^1.7.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
+    "bootstrap": "^4.5.2",
     "get-image-data": "^3.0.1",
     "material-survey": "^1.0.34",
     "moment": "^2.23.0",
     "react-full-screen": "^0.2.4",
+    "react-intersection-observer": "^8.26.2",
     "react-json-view": "^1.19.1",
     "react-markdown": "^4.0.6",
     "react-monaco-editor": "^0.25.1",
     "react-remove-scroll": "^2.0.4",
     "react-select": "^2.2.0",
     "react-syntax-highlighter": "^10.1.3",
+    "reactstrap": "^8.5.1",
     "seamless-immutable": "^7.1.4",
     "transformation-matrix-js": "^2.7.6",
     "use-key-hook": "^1.3.0"
